load("//private/ruls:tests.bzl", "run_tests")
load("//third_party:rules_repository.bzl", _maven_bin = "MAVEN_BINARY_WS_NAME")

_EXECUTABLE_TOOL_WS = _maven_bin

_deps = [
    "@rules_bazelizer_maven//:org_projectlombok_lombok",
    "@rules_bazelizer_maven//:com_google_guava_guava",

    "@info_picocli_picocli",
    "@org_apache_maven_shared_maven_invoker",
    "@org_apache_maven_shared_maven_shared_utils",
    "@com_github_spullara_mustache_java_compiler",
    "@com_jcabi_jcabi_xml",

    "@rules_bazelizer_maven//:commons_io_commons_io",
    "@rules_bazelizer_maven//:org_apache_commons_commons_compress",
    "@rules_bazelizer_maven//:org_slf4j_slf4j_api",
    "@rules_bazelizer_maven//:ch_qos_logback_logback_classic",
    "@rules_bazelizer_maven//:ch_qos_logback_logback_core",
    # bazel infra support
    "@bazel_tools//tools/java/runfiles"
]

_jopts = ["-source","8","-target","8",]

java_binary(
    name = "mvn",
    srcs = glob(["*.java"], exclude = ["*Test.java"]),
    javacopts = _jopts,
    resources = ["//private/tools/jvm/mvn/java:java_resources"],
    jvm_flags = ["--illegal-access=permit", "-Dmaven.bin.workspace=\"%s\"" % _EXECUTABLE_TOOL_WS],
    deps = _deps,
    data = ["@%s//:bin" % (_EXECUTABLE_TOOL_WS)],
    plugins = [":lombok_plugin"],
    main_class = "tools.jvm.mvn.Cli",
    visibility = ["//visibility:public"],
)

run_tests(
    name = "mvn_test",
    package = "tools.jvm.mvn",
    srcs = glob(["*Test.java"]),
    data = glob(["**"],exclude = ["*.java"]),
    deps = [
        ":mvn",
        "@junit_junit",
        "@org_hamcrest_hamcrest_core",
        "@org_hamcrest_hamcrest_library",
#        "@rules_bazelizer_maven//:org_hamcrest_hamcrest_library",
    ] + _deps,
)


java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = [
        "@rules_bazelizer_maven//:org_projectlombok_lombok",
    ],
    generates_api = 1,
)