load("//private/ruls:tests.bzl", "run_tests")
load("//third_party:rules_repository.bzl", _maven_bin_name = "MAVEN_BINARY_NAME")


_deps = [
    "@org_projectlombok_lombok",
    "@com_google_guava_guava",
    "@info_picocli_picocli",
    "@org_apache_maven_shared_maven_invoker",
    "@org_apache_maven_shared_maven_shared_utils",
    "@com_github_spullara_mustache_java_compiler",
    "@com_jcabi_jcabi_xml",
    "@commons_io_commons_io",
    "@org_apache_commons_commons_compress",
    "@org_slf4j_slf4j_api",
    "@ch_qos_logback_logback_classic",
    "@ch_qos_logback_logback_core",
    # bazel infra support
    "@bazel_tools//tools/java/runfiles"
]

_jopts = ["-source","8","-target","8",]

java_binary(
    name = "mvn",
    srcs = glob(["*.java"], exclude = ["*Test.java"]),
    javacopts = _jopts,
    resources = ["//private/tools/jvm/mvn/java:java_resources"],
    jvm_flags = ["--illegal-access=permit", "-Dmaven.bin.workspace=\"%s\"" % _maven_bin_name],
    deps = _deps,
    data = ["@%s//:%s" % (_maven_bin_name, _maven_bin_name)],
    plugins = [":lombok_plugin"],
    main_class = "tools.jvm.mvn.Cli",
    visibility = ["//visibility:public"],
)

run_tests(
    name = "mvn_test",
    package = "tools.jvm.mvn",
    srcs = glob(["*Test.java"]),
    data = glob(["**"],exclude = ["*.java"]),
    deps = [
        ":mvn",
        "@junit_junit",
        "@org_hamcrest_hamcrest_core",
        "@org_hamcrest_hamcrest_library",
    ] + _deps,
)


java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = [
        "@org_projectlombok_lombok",
    ],
    generates_api = 1,
)